@@ -25,10 +25,10 @@ float color_matrix[3][3][3] = {
      {0.2126729, 0.7151522, 0.0721750},
      {0.0193339, 0.1191920, 0.9503041}},
 
-    /* REC.709 */
-    {{0.4124564, 0.3575761, 0.1804375},
-     {0.2126729, 0.7151522, 0.0721750},
-     {0.0193339, 0.1191920, 0.9503041}},
+    /* REC.709: from Wolfgang Woehl via Lilian Lefranc */
+    {{0.412390799265959,  0.357584339383878, 0.180480788401834}
+     {0.21263900587151,   0.715168678767756, 0.0721923153607337}
+     {0.0193308187155918, 0.119194779794626, 0.950532152249661}},
 
     /* DC28.30 (2006-02-24) */
     {{0.4451698156, 0.2771344092, 0.1722826698},
